# LuisaComputeGaussianSplatting

./: .env.template  .gitignore  CMakeLists.txt  README.md  data  migration_design.md  setup.lua  xmake.lua
app/: command_parser.hpp  display.cpp  display.h  gaussians.cpp  gaussians.h  happly.h  main.cpp  xmake.lua
app_test/: main.cpp  xmake.lua
doc/: fig_lcgs_compare.tex  roadmap.md
lcgs/: xmake.lua
lcgs/include/lcgs/: config.h  gs_projector.h  gs_tile_splatter.h  module.h  proxy.h  sh_preprocessor.h  state.h
lcgs/include/lcgs/core/: concept.hpp  memory.hpp  runtime.h  sugar.h
lcgs/include/lcgs/util/: buffer_filler.h  camera.h  device_parallel.h  gaussian.hpp  grid_stride_loop.h  misc.h  misc.hpp  sh.hpp  transform.hpp
lcgs/src/: __pch.h  module.cpp  sh_preprocessor.cpp
lcgs/src/gs_projector/: impl.cpp  shader.cpp
lcgs/src/gs_tile_splatter/: impl.cpp  shader.cpp
lcgs/src/util/: buffer_filler.cpp  camera.cpp  device_parallel.cpp  misc.cpp
lcpp-integration/: README.md  xmake.lua
lcpp-integration/xmake/: package.lua
test/: test_camera.cpp  test_dummy.cpp  test_radix_sort_alignment.cpp  xmake.lua
test/_framework/: test_util.cpp  test_util.h
